--- a/curriculo.html
+++ b/curriculo.html
@@ -27,7 +27,30 @@
             padding: 2em 0;
         }
 
+        .profile-container {
+            position: relative;
+            margin-bottom: 1em;
+        }
+
+        .profile-picture {
+            width: 120px; /* Largura desejada da foto de perfil */
+            height: 120px; /* Altura desejada da foto de perfil */
+            border-radius: 50%; /* Moldura redonda */
+            overflow: hidden;
+            margin: 0 auto;
+        }
+
+        .profile-picture img {
+            width: 100%;
+            height: auto;
+        }
+
         h1 {
+            margin: 0;
+            margin-top: 0.5em; /* Adicione um pequeno espaço entre a foto e o nome */
+        }
+
+        p {
             margin: 0;
         }
 
@@ -71,13 +94,26 @@
             flex: 1;
             margin-right: 1em;
         }
+
+
+footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 2em 0;
+        }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Seu Nome</h1>
-        <p>Estudante do Ensino Médio</p>
+        <div class="profile-container">
+            <div class="profile-picture">
+                <img src="avatar.png" alt="Foto de perfil">
+            </div>
+            <h1>Seu Nome</h1>
+            <p>Estudante do Ensino Médio</p>
+        </div>
     </header>
 
     <section>
@@ -116,11 +152,19 @@
 
     <section class="skills">
         <h2>Habilidades</h2>
+</section>
+<section class="skills">
+
         <div>Comunicação</div>
         <div>Raciocínio Lógico</div>
         <div>Trabalho em Equipe</div>
+	<div>Informática</div>
+	<div>Sei fazer café</div>
         <!-- Adicione mais habilidades conforme necessário -->
     </section>
-
+<footer>
+        <div class="profile-container">
+<p> texto aqui </p>
+</footer>
 </body>
 </html>
